exports/_cluster_/admissionregistration.k8s.io.ValidatingWebhookConfiguration.ingress-app-ingress-nginx-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: ingress-app
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: ingress-app
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.11.1
    helm.sh/chart: ingress-nginx-4.11.1
  name: ingress-app-ingress-nginx-admission
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkakNDQVJ1Z0F3SUJBZ0lRVXBwSmRkYm5yWGJNc2hXbzFYaHp5ekFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEkwTURnd09ERTNNalV4TUZvWUR6SXhNalF3TnpFMU1UY3lOVEV3V2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRTBEdnhtY0FaCkRUSFBxVmtEeWtOMnROTmtkZGVYSUNuZGNzSkV6N2JxTnhVVjVXYUJzSFVheDNIYng1dmUvNjhyUzErYUJNVDQKZW5EYnNMMDZTSkdobjZOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0ExVW [...]
    service:
      name: ingress-app-ingress-nginx-controller-admission
      namespace: default
      path: /networking/v1/ingresses
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate.nginx.ingress.kubernetes.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
